--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,27 +1,27 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">DateBook</a>
+  <a class="navbar-brand" [routerLink]="['/home']">DateBook</a>
 
 
   <ul class="navbar-nav mr-auto">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Matches</a>
+    <li class="nav-item" routerLinkActive=" router-link-active">
+      <a class=" nav-link" [routerLink]="['/members']">Matches</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Lists</a>
+    <li class="nav-item" routerLinkActive="router-link-active">
+      <a class="nav-link" [routerLink]="['/lists']">Lists</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Messages</a>
+    <li class="nav-item" routerLinkActive="router-link-active">
+      <a class="nav-link" [routerLink]="['/messages']">Messages</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#" (click)="logout()">Logout</a>
     </li>
   </ul>
 
-  <div *ngIf="loggedIn()" class="dropdown">
-    <a class="dropdown-toggle text-light">
-      Welcome User
+  <div *ngIf="loggedIn()" class="dropdown" dropdown>
+    <a class="dropdown-toggle text-light" dropdownToggle>
+      Welcome {{authService.decodedToken?.unique_name | titlecase}}
     </a>
-    <div class="dropdown-menu">
+    <div *dropdownMenu class="dropdown-menu">
       <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit Profile</a>
       <div class="dropdown divider"></div>
       <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Logout</a>
